--- a/style.css
+++ b/style.css
@@ -1,12 +1,93 @@
+
 * {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
+  /* outline: 1px solid pink; */
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--white);
 }
 
 /* Add styles here! */
+
+:root {
+
+  --primary-green: hsl(160deg, 100%, 30%);
+  --gold-lighter: hsl(45deg, 100%, 50%);
+  --gold-darker: hsl(45deg, 100%, 40%);
+
+  --black: hsl(0deg, 0%, 0%);
+  --very-dark-grey: hsl(0deg, 0%, 10%);
+  --dark-grey: hsl(0deg, 0%, 30%);
+  --light-grey: hsl(0deg, 0%, 60%);
+  --white: hsl(0deg, 0%, 100%);
+
+  --margin-gap: 3rem; 
+}
+
+/* * {
+  outline: 1px solid pink;
+} */
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin-inline: auto;
+  padding-inline: var(--margin-gap);
+}
+
+h1{
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  color: var(--very-dark-grey);
+}
+.intro-chunk{
+  padding-bottom: 3rem;
+}
+
+.intro-chunk p{
+  max-width: 36ch;
+}
+
+header{
+  border-bottom: 6px solid var(--light-grey);
+  background-color: var(--white);
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+main .max-width-wrapper {
+  background-color: white;
+  border-bottom: 6px solid var(--light-grey);
+}
+
+.card h2 {
+  display: inline-block;
+  margin-left: calc(-1* var(--margin-gap));
+  padding: 1rem;
+  padding-inline: var(--margin-gap);
+  background: var(--gold-lighter);
+  border-bottom: 5px solid var(--gold-darker);
+  color: var(--black);
+}
+
+.card {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+strong{
+  color: var(--primary-green);
+}
+
+p{
+  line-height: 1.5rem;
+  color: var(--dark-grey);
+}
